--- a/src/app/user-page/user-page.component.html
+++ b/src/app/user-page/user-page.component.html
@@ -1,33 +1,4 @@
-<nav
-  class="
-    navbar navbar-expand navbar-dark
-    bg-color
-    position-fixed
-    w-100
-    top-0
-    navbar-home
-  "
->
-  <div class="container-fluid">
-    <a class="navbar-brand" routerLink="/home"
-      ><logo [animated]="false" [width]="20"></logo
-    ></a>
-    <div class="d-flex justify-content-center">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link text-light active" routerLink="/home">
-            <i class="bi icon-lg bi-house-door-fill"></i>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-light" routerLink="/login">
-            <i class="bi icon-lg bi-person-circle"></i>
-          </a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
+<topnav></topnav>
 
 <div class="container text-color">
   <div class="border-0 shadow-sm card-hover-primary">
@@ -327,7 +298,9 @@
                 type="text"
                 class="form-control-loading"
               ></textarea>
-              <div *ngIf="profileForm.controls.description.errors && editProfile">
+              <div
+                *ngIf="profileForm.controls.description.errors && editProfile"
+              >
                 <small
                   [@fadeIn]
                   class="text-danger"
