--- a/src/app/user-ranking/user-ranking.component.css
+++ b/src/app/user-ranking/user-ranking.component.css
@@ -1,90 +1,203 @@
-.thumbnails {
-	width: 80px;
-	height: 80px;
-	object-fit: cover
+@import "ag-grid-community/dist/styles/ag-grid.css";
+@import "ag-grid-community/dist/styles/ag-theme-alpine.css";
+
+.body {
+  background: #f7f7f7;
 }
 
-.card-hover-primary {
-	margin-top: 8rem
+.scrollmenu-container {
+  margin-top: 15rem;
 }
 
-.form-control-img {
-	display: block;
-	width: 100%;
-	padding: .375rem .75rem;
-	font-size: 1rem;
-	font-weight: 400;
-	line-height: 1.5;
-	color: #212529;
-	background-color: #fff;
-	background-clip: padding-box;
-	border: 1px solid #ced4da;
-	-webkit-appearance: none;
-	-moz-appearance: none;
-	appearance: none;
-	border-radius: .25rem;
-	transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out
+.scrollmenu {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 5rem;
+  overflow-x: auto;
+  white-space: nowrap;
 }
 
-.form-control-img:hover {
-	border-color: var(--corp-color-one);
-	color: var(--corp-color-one)
+.ranking-image {
+  /* width: 5rem !important;
+  height: 5rem !important;
+  position: absolute;
+  left: 50%; */
+  transform: scaleX(0.99);
 }
 
-.button-loading {
-	height: 31px
+.rol-selector {
+  top: 7rem;
+  position: relative;
+  background-color: #8a00c172;
+  width: fit-content;
+  height: fit-content;
+  border-radius: 0.5rem;
+  text-align: center;
+  color: white;
 }
 
-.form-control-loading {
-	display: block;
-	width: 100%;
-	padding: .375rem .75rem;
-	font-size: 1rem;
-	font-weight: 400;
-	line-height: 1.5;
-	color: #212529;
-	background-color: #fff;
-	-webkit-appearance: none;
-	-moz-appearance: none;
-	appearance: none;
-	border-radius: .25rem;
-	transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out
+.user-rol-filter {
+  background-color: brown;
+  border-radius: 0.5rem;
 }
 
-.loading-50 {
-	width: 50%
+.moderator-rol-filter {
+  background-color: #000000;
+  border-radius: 0.5rem;
 }
 
-.loading-75 {
-	width: 75%
+.add-ranking-title {
+  min-width: 10rem;
+  position: relative;
+  cursor: pointer;
 }
 
-.loading-25 {
-	width: 25%
+.rankingData {
+  /* width: 25rem; */
+}
+.add-ranking-title:hover {
+  text-shadow: var(--corp-color-one) 0.2px 0.2px;
+}
+.add-ranking {
+  cursor: pointer;
+  position: absolute;
 }
 
-.loading-10 {
-	width: 10%
+.tarjetas {
+  /* width: 28rem !important; */
 }
 
-.hide {
-	display: none
+.add-ranking-input {
+  border-radius: 0.5rem;
+  width: 5rem !important;
+  height: 2.5rem;
+  font-size: x-large;
 }
 
-.form-control-loading:focus {
-	border-color: transparent!important;
-	outline: 0!important
+.add-ranking-button {
+  margin-left: 1vh;
+  background-color: var(--corp-color-one);
+  position: relative;
+  margin-top: -0.5rem !important;
 }
 
-.form-control-loading:empty,
-.text1:empty,
-.text2:empty,
-.text3:empty,
-.text4:empty,
-.thumbnails:empty {
-	animation: loading 2s infinite ease-in-out;
-	background: #dedfe1;
-	background-image: -webkit-linear-gradient(to right, #dedfe1 0, #f2f3f5 20%, #dedfe1 40%, #dedfe1 60%, #dedfe1 80%, #dedfe1 100%);
-	background-image: linear-gradient(to right, #dedfe1 0, #f2f3f5 20%, #dedfe1 40%, #dedfe1 60%, #dedfe1 80%, #dedfe1 100%);
-	background-repeat: no-repeat
+.no-rankings {
+  margin-top: 3rem;
+  color: var(--corp-color-one);
+  font-family: "Circular Std Bold";
+  font-size: 2rem;
+}
+#rankingId {
+  border-radius: 0.5rem;
+  width: 7.5rem !important;
+  height: 3rem;
+}
+
+.btn-primary {
+  background-color: var(--corp-color-one);
+  transform: scale(1.2);
+  margin-top: -0.2rem !important;
+  border-color: var(--corp-color-one);
+  margin-left: 1rem;
+}
+.title {
+  top: 5rem;
+  position: relative;
+  color: var(--corp-color-one);
+}
+
+.ag-center-cols-viewport {
+  overflow: hidden !important;
+}
+.ranking {
+  text-align: left !important;
+  overflow: hidden !important;
+  width: auto;
+  height: 25rem;
+}
+
+.cards_landscape_wrap-2 {
+  text-align: center;
+  background: #f7f7f7;
+}
+.cards_landscape_wrap-2 .container {
+  padding-top: 80px;
+  padding-bottom: 100px;
+}
+.cards_landscape_wrap-2 a {
+  text-decoration: none;
+  outline: none;
+}
+.cards_landscape_wrap-2 .card-flyer {
+  border-radius: 5px;
+}
+
+.cards_landscape_wrap-2 .card-flyer .image-box {
+  background: #ffffff;
+  overflow: hidden;
+  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
+}
+.cards_landscape_wrap-2 .card-flyer .image-box img {
+  -webkit-transition: all 0.9s ease;
+  -moz-transition: all 0.9s ease;
+  -o-transition: all 0.9s ease;
+  -ms-transition: all 0.9s ease;
+  width: 100%;
+  height: 42vh;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+/* .cards_landscape_wrap-2 .card-flyer:hover .image-box img {
+  opacity: 0.7;
+  -webkit-transform: scale(1.15);
+  -moz-transform: scale(1.15);
+  -ms-transform: scale(1.15);
+  -o-transform: scale(1.15);
+  transform: scale(1.15);
+} */
+.cards_landscape_wrap-2 .card-flyer .text-box {
+  text-align: center;
+}
+.cards_landscape_wrap-2 .card-flyer .text-box .text-container {
+  padding: 30px 18px;
+}
+.cards_landscape_wrap-2 .card-flyer {
+  background: #ffffff;
+  margin-top: 50px;
+  -webkit-transition: all 0.2s ease-in;
+  -moz-transition: all 0.2s ease-in;
+  -ms-transition: all 0.2s ease-in;
+  -o-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+  box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.4);
+}
+/* .cards_landscape_wrap-2 .card-flyer:hover {
+  background: #fff;
+  box-shadow: 0px 15px 26px rgba(0, 0, 0, 0.5);
+  -webkit-transition: all 0.2s ease-in;
+  -moz-transition: all 0.2s ease-in;
+  -ms-transition: all 0.2s ease-in;
+  -o-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+  margin-top: 50px;
+} */
+.cards_landscape_wrap-2 .card-flyer .text-box p {
+  margin-top: 10px;
+  margin-bottom: 0px;
+  padding-bottom: 0px;
+  font-size: 14px;
+  letter-spacing: 1px;
+  color: #000000;
+}
+.cards_landscape_wrap-2 .card-flyer .text-box h6 {
+  margin-top: 0px;
+  margin-bottom: 4px;
+  font-size: 18px;
+  font-weight: bold;
+  text-transform: uppercase;
+  font-family: "Roboto Black", sans-serif;
+  letter-spacing: 1px;
+  color: #8a00c1;
 }
