--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,19 @@
+/* @import "ag-grid-community/dist/styles/ag-grid.css";
+@import "ag-grid-community/dist/styles/ag-theme-alpine.css"; */
 @import "ag-grid-community/dist/styles/ag-grid.css";
-@import "ag-grid-community/dist/styles/ag-theme-alpine.css";
+@import "stylesAg.css";
+
 @import "assets/keyframes.css";
 @import "assets/roboto.css";
 
 :root {
   --corp-color-one: #6d30f3;
+  --corp-color-one-ligth: #6e30f3cd;
   --corp-color-one-hover: #6e30f365;
   --corp-color-two: #4434ac;
-  --corp-color-three: #a37af3;
+  --corp-color-three: #a27af3;
+  --corp-color-hover-light: #d4c2f8;
+  --corp-color-hover-background-light: #d4c2f840;
   --corp-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
     rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
   --transition: ease-in-out 0.15s;
