--- a/src/app/user-page/user-page.component.html
+++ b/src/app/user-page/user-page.component.html
@@ -15,6 +15,7 @@
       <button
         *ngIf="profile"
         class="btn btn-sm btn-color text-light"
+        #toggleEditBtn
         (click)="toggleEdit()"
       >
         Editar perfil
@@ -321,6 +322,9 @@
                   "
                   ><i class="bi bi-x me-2"></i>Este campo es obligatorio.</small
                 >
+              </div>
+              <div class="d-flex mt-3">
+                <button [disabled]="!editProfile" class="btn btn-color text-light">Cambiar datos</button>
               </div>
             </div>
           </div>
