Cambiando text-color y añadiendo shadow

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,7 +12,7 @@
       <p class="lead fst-italic">
         Herramienta definitiva para creación, edición y manejo de Rankings
       </p>
-      <a class="btn btn-light text-color fw-bolder mt-2" routerLink="/login"
+      <a class="btn btn-light-color shadow-sm fw-bolder mt-1" routerLink="/login"
         >¡Comenzamos!</a
       >
     </div>
