--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -9,3 +9,12 @@
 .login-card-height {
 	height: 25%
 }
+
+.fullscreen {
+	overflow: hidden;
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0
+}
