--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,41 +1,124 @@
-<div class="container-fluid bg-color">
-    <div class="row position-relative align-items-center vh-100">
-        <div class="login-card-width mx-auto position-absolute top-40 start-50 translate-middle" [@fadeIn]>
-            <h3 class="text-light"> <logo [animated]="false" [width]="20"></logo> | Login</h3>
-            <div class="card border-0 border-bottom border-5 border-color-hover login-card-height shadow border text-color">
-                <form class="card-body d-flex flex-column" [formGroup]="loginForm" (ngSubmit)="logIn()">
-                    <label for="email">Email</label>
-                    <input formControlName="email" type="text" placeholder="Introduce tu email" class="form-control text-color"/>
-                    <div *ngIf="loginForm.controls.email.errors">
-                        <small [@fadeIn] class="text-danger" *ngIf ="loginForm.controls.email.errors['pattern']"><i class="bi bi-x me-2"></i>El formato del email es incorrecto.</small>
-                        <small [@fadeIn] class="text-danger" *ngIf ="loginForm.controls.email.touched && loginForm.controls.email.errors['required']"><i class="bi bi-x me-2"></i>Este campo es obligatorio.</small>
-                    </div>
-                    <div *ngIf="!loginForm.controls.email.errors">
-                        <small [@fadeIn] class="text-success"><i class="bi bi-check-lg me-2"></i>El correo es válido.</small>
-                    </div>
-                    <label class="mt-3" for="password">Password</label>
-                    <input formControlName="password" type="password" placeholder="Introduce tu contraseña" class="form-control text-color"/>
-                    <div *ngIf="loginForm.controls.password.errors">
-                        <small [@fadeIn] class="text-danger" *ngIf ="loginForm.controls.password.touched && loginForm.controls.password.errors['minlength']"><i class="bi bi-x me-2"></i>La longitud debe ser de 8 caracteres.</small>
-                        <small [@fadeIn] class="text-danger" *ngIf ="loginForm.controls.password.touched && loginForm.controls.password.errors['required']"><i class="bi bi-x me-2"></i>Este campo es obligatorio.</small>
-                    </div>
-                    <div *ngIf="!loginForm.controls.password.errors">
-                        <small [@fadeIn] class="text-success"><i class="bi bi-check-lg me-2"></i>La contraseña es válida.</small>
-                    </div>
-                    <div class="d-grid mt-3">
-                        <button type="submit" class="btn btn-color text-light mb-2" [disabled]="!loginForm.valid || disabledButton">Iniciar sesión</button>
-                    </div>
-                    <hr class="my-1 border-danger">
-                    <div class="d-flex justify-content-center mt-3">
-                        <button class="btn bg-info btn-color text-light mx-1"><i class="bi bi-twitter"></i></button>
-                        <button class="btn bg-danger btn-color text-light mx-1" disabled><i class="bi bi-google"></i></button>
-                        <button class="btn bg-primary btn-color text-light mx-1" disabled><i class="bi bi-facebook"></i></button>
-                    </div>
-                </form>
-                <div class="d-flex justify-content-center text-center mb-3">
-                    <a class="link-color" routerLink="/register">Registrate aquí</a>
-                </div>
-            </div>
+<div class="container-fluid fullscreen bg-color">
+  <div class="ocean">
+    <div class="bubble bubble-1"></div>
+    <div class="bubble bubble-2"></div>
+    <div class="bubble bubble-3"></div>
+    <div class="bubble bubble-4"></div>
+    <div class="bubble bubble-5"></div>
+    <div class="bubble bubble-6"></div>
+    <div class="bubble bubble-7"></div>
+    <div class="bubble bubble-8"></div>
+    <div class="bubble bubble-9"></div>
+    <div class="bubble bubble-10"></div>
+    <div class="bubble bubble-11"></div>
+    <div class="bubble bubble-12"></div>
+  </div>
+  <div class="row position-relative align-items-center vh-100">
+    <div
+      class="login-card-width mx-auto position-absolute top-40 start-50 translate-middle"
+      [@fadeIn]
+    >
+      <h3 class="text-light">
+        <logo [animated]="false" [width]="20"></logo> | Login
+      </h3>
+      <div
+        class="card border-0 border-bottom border-5 border-color-hover login-card-height shadow border text-color"
+      >
+        <form
+          class="card-body d-flex flex-column"
+          [formGroup]="loginForm"
+          (ngSubmit)="logIn()"
+        >
+          <label for="email">Email</label>
+          <input
+            formControlName="email"
+            type="text"
+            placeholder="Introduce tu email"
+            class="form-control text-color"
+          />
+          <div *ngIf="loginForm.controls.email.errors">
+            <small
+              [@fadeIn]
+              class="text-danger"
+              *ngIf="loginForm.controls.email.errors['pattern']"
+              ><i class="bi bi-x me-2"></i>El formato del email es
+              incorrecto.</small
+            >
+            <small
+              [@fadeIn]
+              class="text-danger"
+              *ngIf="
+                loginForm.controls.email.touched &&
+                loginForm.controls.email.errors['required']
+              "
+              ><i class="bi bi-x me-2"></i>Este campo es obligatorio.</small
+            >
+          </div>
+          <div *ngIf="!loginForm.controls.email.errors">
+            <small [@fadeIn] class="text-success"
+              ><i class="bi bi-check-lg me-2"></i>El correo es válido.</small
+            >
+          </div>
+          <label class="mt-3" for="password">Password</label>
+          <input
+            formControlName="password"
+            type="password"
+            placeholder="Introduce tu contraseña"
+            class="form-control text-color"
+          />
+          <div *ngIf="loginForm.controls.password.errors">
+            <small
+              [@fadeIn]
+              class="text-danger"
+              *ngIf="
+                loginForm.controls.password.touched &&
+                loginForm.controls.password.errors['minlength']
+              "
+              ><i class="bi bi-x me-2"></i>La longitud debe ser de 8
+              caracteres.</small
+            >
+            <small
+              [@fadeIn]
+              class="text-danger"
+              *ngIf="
+                loginForm.controls.password.touched &&
+                loginForm.controls.password.errors['required']
+              "
+              ><i class="bi bi-x me-2"></i>Este campo es obligatorio.</small
+            >
+          </div>
+          <div *ngIf="!loginForm.controls.password.errors">
+            <small [@fadeIn] class="text-success"
+              ><i class="bi bi-check-lg me-2"></i>La contraseña es
+              válida.</small
+            >
+          </div>
+          <div class="d-grid mt-3">
+            <button
+              type="submit"
+              class="btn btn-color text-light mb-2"
+              [disabled]="!loginForm.valid || disabledButton"
+            >
+              Iniciar sesión
+            </button>
+          </div>
+          <hr class="my-1 border-danger" />
+          <div class="d-flex justify-content-center mt-3">
+            <button class="btn bg-info btn-color text-light mx-1">
+              <i class="bi bi-twitter"></i>
+            </button>
+            <button class="btn bg-danger btn-color text-light mx-1" disabled>
+              <i class="bi bi-google"></i>
+            </button>
+            <button class="btn bg-primary btn-color text-light mx-1" disabled>
+              <i class="bi bi-facebook"></i>
+            </button>
+          </div>
+        </form>
+        <div class="d-flex justify-content-center text-center mb-3">
+          <a class="link-color" routerLink="/register">Registrate aquí</a>
         </div>
+      </div>
     </div>
+  </div>
 </div>
