--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -16,12 +16,12 @@
   <div class="row h-75 align-items-center">
     <div class="col text-light">
       <div class="row justify-content-center text-center">
-        <div class="col title text-shadow">
+        <div class="col title">
           <i class="bi bi-cloud-lightning-rain-fill"></i>
           <div class="subtitle mt-5 ">ERROR 404</div>
         </div>
       </div>
-      <div class="row mt-5 text-center text-shadow">
+      <div class="row mt-5 text-center">
         <h3>La página que intentas acceder no existe.</h3>
       </div>
       <div class="row text-center mt-3">
