--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,7 +12,7 @@
       <p class="lead fst-italic">
         Herramienta definitiva para creación, edición y manejo de Rankings
       </p>
-      <a class="btn btn-light-color shadow-sm fw-bolder mt-1" routerLink="/login"
+      <a class="btn btn-light-color shadow fw-bolder mt-1" routerLink="/login"
         >¡Comenzamos!</a
       >
     </div>
@@ -118,7 +118,7 @@
                 de uso
               </h2>
               <p class="text-light">
-                Desarrollado en mente para un uso escolar, casual y profesional.
+                Desarrollado en mente para uso escolar, casual y profesional.
               </p>
             </section>
           </div>
