--- a/src/app/user-page/user-page.component.html
+++ b/src/app/user-page/user-page.component.html
@@ -125,6 +125,15 @@
                   "
                   ><i class="bi bi-x me-1"></i>Este campo es obligatorio.</small
                 >
+                <small
+                  [@fadeIn]
+                  class="text-danger"
+                  *ngIf="
+                    profileForm.controls.name.touched &&
+                    profileForm.controls.name.errors['pattern']
+                  "
+                  ><i class="bi bi-x me-1"></i>No puede contener caracteres especiales.</small
+                >
               </div>
             </div>
 
