imagenes en ag grid i pop up al hover

--- a/src/app/ag-grid/gender-renderer/gender-renderer.component.html
+++ b/src/app/ag-grid/gender-renderer/gender-renderer.component.html
@@ -1,1 +1,19 @@
-<p>gender-renderer works!</p>
+<span
+  class="insinia"
+  ngxTippy
+  [ngxTippy]="nivel"
+  [tippyProps]="{
+    arrow: false,
+    placement: 'top'
+  }"
+>
+  <span
+    ngxTippy
+    [ngxTippy]="value"
+    [tippyProps]="{
+      arrow: false,
+      placement: 'bottom'
+    }"
+  >
+    <img [src]="imageSource" class="insinia" /> </span
+></span>
