--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -15,14 +15,28 @@
   </div>
   <div class="row position-relative align-items-center vh-100">
     <div
-      class="login-card-width mx-auto position-absolute top-40 start-50 translate-middle"
+      class="
+        login-card-width
+        mx-auto
+        position-absolute
+        top-40
+        start-50
+        translate-middle
+      "
       [@fadeIn]
     >
       <h3 class="text-light">
         <logo [animated]="false" [width]="20"></logo> | Login
       </h3>
       <div
-        class="card border-0 border-bottom border-5 border-color-hover login-card-height shadow border text-color"
+        class="
+          card
+          border-0 border-bottom border-5 border-color-hover
+          login-card-height
+          shadow
+          border
+          text-color
+        "
       >
         <form
           class="card-body d-flex flex-column"
@@ -36,28 +50,30 @@
             placeholder="Introduce tu email"
             class="form-control text-color"
           />
-          <div *ngIf="loginForm.controls.email.errors">
-            <small
-              [@fadeIn]
-              class="text-danger"
-              *ngIf="loginForm.controls.email.errors['pattern']"
-              ><i class="bi bi-x me-2"></i>El formato del email es
-              incorrecto.</small
-            >
-            <small
-              [@fadeIn]
-              class="text-danger"
-              *ngIf="
-                loginForm.controls.email.touched &&
-                loginForm.controls.email.errors['required']
-              "
-              ><i class="bi bi-x me-2"></i>Este campo es obligatorio.</small
-            >
-          </div>
-          <div *ngIf="!loginForm.controls.email.errors">
-            <small [@fadeIn] class="text-success"
-              ><i class="bi bi-check-lg me-2"></i>El correo es válido.</small
-            >
+          <div *ngIf="loginForm.controls.errors">
+            <div *ngIf="loginForm.controls.email.errors">
+              <small
+                [@fadeIn]
+                class="text-danger"
+                *ngIf="loginForm.controls.email.errors['pattern']"
+                ><i class="bi bi-x me-2"></i>El formato del email es
+                incorrecto.</small
+              >
+              <small
+                [@fadeIn]
+                class="text-danger"
+                *ngIf="
+                  loginForm.controls.email.touched &&
+                  loginForm.controls.email.errors['required']
+                "
+                ><i class="bi bi-x me-2"></i>Este campo es obligatorio.</small
+              >
+            </div>
+            <div *ngIf="!loginForm.controls.email.errors">
+              <small [@fadeIn] class="text-success"
+                ><i class="bi bi-check-lg me-2"></i>El correo es válido.</small
+              >
+            </div>
           </div>
           <label class="mt-3" for="password">Password</label>
           <input
